feat: add styling for marked words

--- a/src/app/notes/components/note/note.component.html
+++ b/src/app/notes/components/note/note.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="note-block">
-    <p class="title my-title">{{ note.text }}</p>
+    <p class="title my-title" #title></p>
   </div>
   <div class="mark-block">
     <ng-container *ngFor="let mark of note.mark">
