--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,8 @@ a {
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
 }
+
+.highlighted{
+  color: rgb(63, 83, 155);
+  font-weight: 700;
+}
