--- a/src/app/notes/pages/notes/notes.component.html
+++ b/src/app/notes/pages/notes/notes.component.html
@@ -1,10 +1,10 @@
 <main class="main">
   <app-filter-block></app-filter-block>
-  <button mat-raised-button color="primary">Add new note</button>
+  <button mat-raised-button color="primary" (click)="createNewNote()">Add new note</button>
   <div class="notes-block">
     <ng-container *ngIf="(notesService.allNotes$ | async) as notes">
       <ng-container *ngFor="let note of notes; let i = index">
-        <app-note [note]="note"></app-note>
+        <app-note [note]="note" ></app-note>
       </ng-container>
     </ng-container>
   </div>
