--- a/src/app/notes/components/note/note.component.scss
+++ b/src/app/notes/components/note/note.component.scss
@@ -20,17 +20,22 @@
     }
 
     .icon-block{
+      margin-right: 2%;
       display: flex;
-      transition: all 0.3s ease;
       .edit-btn, .delete-btn{
-        display: none;
+        opacity: 0;
+        width: 0;
+
+        transition: all 0.3s ease-in-out;
       }
       &:hover{
         .edit-btn, .delete-btn{
-          display: block;
+          opacity: 1;
+          width: 30px;
         }
+
         .more-btn{
-          display: none;
+          opacity: 0;
         }
       }
     }
