--- a/src/app/notes/components/note/note.component.html
+++ b/src/app/notes/components/note/note.component.html
@@ -1,6 +1,6 @@
 <div class="note-block-item">
   <div class="title-block">
-    <p class="big-title my-title">Note # {{ note.id }}</p>
+    <p class="big-title my-title">Note # {{ index + 1 }}</p>
     <div class="icon-block">
       <button mat-icon-button aria-label="Example icon" class="more-btn">
         <mat-icon color="accent" >more_vert</mat-icon>
