--- a/src/app/notes/pages/notes/notes.component.scss
+++ b/src/app/notes/pages/notes/notes.component.scss
@@ -5,7 +5,7 @@
   .notes-block{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
   }
 }
