fix: filter block styling, update functionality

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -17,3 +17,12 @@
     line-height: calc(2.2rem + 1.5vmin);
   }
 }
+
+@media (orientation: portrait) {
+  .header{
+    height: 15vh;
+    .title{
+      text-align: center;
+    }
+  }
+}
